# cpp_sort_tracking

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp  run_docker.sh
data/: answer0.txt  answer0_backup.txt  out0.txt
include/: track.h  tracker.h  utils.h
src/: configparser.cpp  kalman_filter.cpp  main.cpp  track.cpp  tracker.cpp
